--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.5.31' // https://kotlinlang.org/docs/releases.html
 //    ext.materialDrawerVersion = '8.0.1' // we'll eventually have to migrate: https://github.com/mikepenz/MaterialDrawer/blob/develop/MIGRATION.md
     ext.materialDrawerVersion = '7.0.0'
+    ext.slf4jVersion = '1.7.32' // http://www.slf4j.org/download.html
     repositories {
         google()
         mavenCentral()
