--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
                 android:label="@string/title_activity_event_display"
                 android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleTask"/>
 
-        <receiver android:name=".widget.BatteryVoltageWidget">
+        <receiver android:name=".widget.BatteryVoltageWidget"
+                android:exported="false">
+            <!--exported is false because we don't need other apps to be able to update the battery voltage widget themselves-->
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -42,9 +44,9 @@
                 android:resource="@xml/battery_voltage_widget_info" />
         </receiver>
         <receiver
-            android:name=".widget.WidgetHandler"
-            android:permission=""
-            tools:ignore="ExportedReceiver">
+                android:name=".widget.WidgetHandler"
+                android:permission=""
+                android:exported="false">
             <intent-filter>
                 <action android:name="me.retrodaredevil.solarthing.android.service.SOLAR_PACKET_COLLECTION" />
             </intent-filter>
@@ -82,6 +84,11 @@
 
         <service
                 android:name=".service.PersistentService"
+                android:enabled="true"
+                android:exported="true"
+                android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+                android:name=".service.CancelCommandService"
                 android:enabled="true"
                 android:exported="true"
                 android:permission="android.permission.BIND_JOB_SERVICE" />
