--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
     sourceSets.main.java.filter.exclude 'META-INF/**/*'
-    compileSdkVersion 30
+    compileSdkVersion 31
     lintOptions {
         abortOnError false
     }
@@ -12,7 +12,7 @@ android {
         multiDexEnabled true
         applicationId "me.retrodaredevil.solarthing.android"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 370
         versionName "1.37"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -49,12 +49,6 @@ android {
     buildFeatures {
         // Determines whether to generate a BuildConfig class.
         buildConfig = false
-        // Determines whether to support View Binding.
-        // Note that the viewBinding.enabled property is now deprecated.
-        viewBinding = false
-        // Determines whether to support Data Binding.
-        // Note that the dataBinding.enabled property is now deprecated.
-        dataBinding = false
         // Determines whether to generate binder classes for your AIDL files.
         aidl = false
         // Determines whether to support RenderScript.
@@ -82,8 +76,8 @@ dependencies {
 
     //noinspection DifferentStdlibGradleVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -95,16 +89,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def solarthingVersion = "db08ed06ac27699c7810c1ae2bd12abe95aa13f8".substring(0, 10)
+    def solarthingVersion = "be8751ac5b2bc0a9b24fd694c29d952c5ca6ecce".substring(0, 10)
 
     //noinspection GradleDependency // Since we use pre-releases, we don't need Android Studio warning us about this
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
     // Note that Gradle cannot always tell that it needs to bump this couchdb-java version, so if you don't bump it to
     //   match whatever couchdb-java version solarthing:core is using, you might get problems because a new method might not be found
     //noinspection GradleDependency
-    implementation "com.github.retrodaredevil:couchdb-java:${"d41524674af822438430d5228550c3caff0ab145".substring(0, 10)}"
+    //implementation "com.github.retrodaredevil:couchdb-java:${"d41524674af822438430d5228550c3caff0ab145".substring(0, 10)}"
 
-    def jacksonVersion = "2.12.4" // https://github.com/FasterXML/jackson-databind/releases
+    def jacksonVersion = "2.13.1" // https://github.com/FasterXML/jackson-databind/releases
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") // { changing = true } // uncomment if we use a snapshot version of Jackson
