--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,14 +58,16 @@
         <receiver
             android:name=".BootReceiver"
             android:directBootAware="true"
-            tools:targetApi="n">
+            tools:targetApi="n"
+                android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.MainActivity" android:launchMode="singleTask">
+        <activity android:name=".activity.MainActivity" android:launchMode="singleTask"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
