--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,6 @@ apply plugin: 'kotlin-android'
 android {
     sourceSets.main.java.filter.exclude 'META-INF/**/*'
     compileSdkVersion 31
-    lintOptions {
-        abortOnError false
-    }
     defaultConfig {
         multiDexEnabled true
         applicationId "me.retrodaredevil.solarthing.android"
@@ -24,21 +21,15 @@ android {
         }
     }
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0']
+        }
     }
     compileOptions {
 //        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion = '30.0.2'
 
     kotlinOptions {
         jvmTarget = "1.8"
@@ -57,6 +48,9 @@ android {
         resValues = true
         // Determines whether to support shader AOT compilation.
         shaders = false
+    }
+    lint {
+        abortOnError false
     }
 }
 repositories {
