Updated gradle to 8.9 and also the Android gradle plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
     lint {
         abortOnError false
     }
+    namespace 'me.retrodaredevil.solarthing.android'
 }
 repositories {
     mavenCentral()
