--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android'
 
 android {
     sourceSets.main.java.filter.exclude 'META-INF/**/*'
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         multiDexEnabled true
         applicationId "me.retrodaredevil.solarthing.android"
         minSdkVersion 26
-        // TODO upgrade to SDK 33. It has lots of requirements
-        targetSdkVersion 33
+        // NOTE: Android 14 is SDK level 34 - https://apilevels.com/
+        targetSdkVersion 34
         versionCode 400
         versionName "1.40"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
