--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android:persistent" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -87,11 +88,13 @@
                 android:name=".service.PersistentService"
                 android:enabled="true"
                 android:exported="true"
+                android:foregroundServiceType="dataSync"
                 android:permission="android.permission.BIND_JOB_SERVICE" />
         <service
                 android:name=".service.CancelCommandService"
                 android:enabled="true"
                 android:exported="true"
+                android:foregroundServiceType="dataSync"
                 android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
